# debugging_template

./: CMakeLists.txt  CMakePresets.json  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: classroom.yml
apps/: CMakeLists.txt  debugging.cpp
include/: PROJECT_LIBRARY.h
include/debugging/: warmup.h
src/: CMakeLists.txt  warmup.cpp
tests/: CMakeLists.txt
